--- a/src/styles/textLayer.css
+++ b/src/styles/textLayer.css
@@ -107,3 +107,8 @@
     width: 100%;
     height: 25px;
   }
+
+  .reference-text-layer{
+    position: fixed;
+    z-index: 3;
+  }
